compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__comparison_op_enums_less.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type s : enum(a)\n    var a, b : s\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    _v_res := a < b\n    _v_res := b < a\n    % enum variants are covered by equivalence rules\n    "
---
"s"@"src/main.t:10..11" [Type]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"s"@"src/main.t:14..21" [Enum]: <error>
"a"@"src/main.t:19..20" [EnumVariant]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"a"@"src/main.t:30..31" [ConstVar(Var, No)]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"b"@"src/main.t:33..34" [ConstVar(Var, No)]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"_v_res"@"src/main.t:82..88" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
