compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__comparison_op_numerics_greater.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Numerics\n    var r : real\n    var i : int\n    var n : nat\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    _v_res := 1 > 1\n    _v_res := 1 > 1.0\n    _v_res := 1 > r\n    _v_res := 1 > i\n    _v_res := 1 > n\n\n    _v_res := 1.0 > 1\n    _v_res := 1.0 > 1.0\n    _v_res := 1.0 > r\n    _v_res := 1.0 > i\n    _v_res := 1.0 > n\n\n    _v_res := r > 1\n    _v_res := r > 1.0\n    _v_res := r > r\n    _v_res := r > i\n    _v_res := r > n\n\n    _v_res := i > 1\n    _v_res := i > 1.0\n    _v_res := i > r\n    _v_res := i > i\n    _v_res := i > n\n\n    _v_res := n > 1\n    _v_res := n > 1.0\n    _v_res := n > r\n    _v_res := n > i\n    _v_res := n > n\n    "
---
"r"@"src/main.t:24..25" [ConstVar(Var, No)]: real
"i"@"src/main.t:41..42" [ConstVar(Var, No)]: int
"n"@"src/main.t:57..58" [ConstVar(Var, No)]: nat
"_v_res"@"src/main.t:108..114" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
