compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__comparison_op_sets_less_eq.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type s : set of boolean\n    var a, b : s\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    _v_res := a <= b\n    _v_res := b <= a\n    "
---
"s"@"src/main.t:10..11" [Type]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"s"@"src/main.t:14..28" [Set]: <error>
"a"@"src/main.t:37..38" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"b"@"src/main.t:40..41" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"_v_res"@"src/main.t:89..95" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
